--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,5 +1,4 @@
-name: Deploy static site to GitHub Pages
-
+name: Deploy Next.js (static export) to GitHub Pages
 on:
   push:
     branches: [ main ]
@@ -14,13 +13,41 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install deps
+        working-directory: next-app
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install --no-audit --no-fund
+          fi
+
+      - name: Build (static export)
+        working-directory: next-app
+        env:
+          GITHUB_PAGES: 'true'
+        run: npm run build   # → next-app/out が生成される
+
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: .          # ルートの index.html をそのまま配信
+          path: next-app/out  # ★ ここが「next-app/out」に変わる
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - id: deployment
         uses: actions/deploy-pages@v4
