--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: next-app/package-lock.json 
 
       - name: Install deps
         working-directory: next-app
